--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "@hookform/resolvers": "^3.9.0",
     "@syncfusion/ej2-react-inputs": "^26.1.41",
     "@syncfusion/ej2-react-spreadsheet": "^26.1.41",
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.1",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.20",
+    "next-session": "^4.0.5",
+    "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
@@ -22,7 +30,14 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
+    "@types/cookie": "^0.6.0",
+    "@types/formidable": "^3.4.5",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.11",
+    "@types/papaparse": "^5.3.14",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "eslint": "^8",
